fixed an issue with episodes that don't have a season specified in their filename due to there only being one season in the series